--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Main Page</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" type='text/css' href="style.css">
 </head>
 
 <body>
@@ -34,135 +34,160 @@
         </nav>
         <div class="contacts">
           <a href="tel:+78000039210" class="contacts__phone">8 (800) 00-392-10</a>
-          <div class="contacts__hours">График работы</div>
+          <div class="contacts__hours"><a class="contacts__hours-link">График работы</a></div>
         </div>
       </div>
     </header>
+    <!-- ------------------------------------------------------------------------------------------ -->
     <div class="banner">
-      <img src="img/banner.jpg" alt="banner" class="banner__img">
-    </div>
-    <section class="features">
-      <h2 class='features__title'>особенности</h2>
-      <ul class="features__list">
-        <li class="features__item">
-          <div class='features__icon-background'>
-            <img src="img/icons/features_1.png" alt="" class='features__icon-img'>
-          </div>
-          <h3 class="features__item-title features__item-title_uniqueness">уникальность</h3>
-          <ul class="features__desk-list">Мы делаем всё, для вашего комфорта
-            <li class="features__desk-item">Питание включено</li>
-            <li class="features__desk-item">Багаж (5 кг)</li>
-            <li class="features__desk-item">Душ/баняs</li>
-          </ul>
-        </li>
-        <li class="features__item">
-          <div class='features__icon-background'>
-            <img src="img/icons/features_2.png" alt="" class='features__icon-img'>
-          </div>
-          <h3 class="features__item-title features__item-title_premium">премиум-класс</h3>
-          <ul class="features__desk-list">Наш зал оборудован тренажёрами А-класса
-            <li class="features__desk-item">Качество </li>
-            <li class="features__desk-item">Продуктивность</li>
-            <li class="ffeatures__desk-item">Результат</li>
-          </ul>
-        </li>
-        <li class="features__item">
-          <div class='features__icon-background'>
-            <img src="img/icons/features_3.png" alt="" class='features__icon-img'>
-          </div>
-          <h3 class="features__item-title features__item-title_coach">личный тренер</h3>
-          <ul class="features__desk-list">Тренер сделает всё для вашего результата
-            <li class="features__desk-item">Программа</li>
-            <li class="features__desk-item">Питание</li>
-            <li class="features__desk-item">План тренировок</li>
-          </ul>
-        </li>
-      </ul>
-    </section>
-    <section class='last_news'>
-      <div <h2 class="last-news__main-title">последние новости</h2>
+      <div class="container">
+        <img src="img/banner.jpg" alt="banner" class="banner__img">
       </div>
-      <aside class="sidebar">
-        <div class="sidebar__top-news">
-          <h4 class='top-news__date'>топ новостей</h4>
-          <div class="top-news__date top-news__date--month ">за сентябрь</div>
-        </div>
-        <ul class="sidebar__pic-list">
-          <li class="sidebar__pic-item">
-            <img src="img/sidebar_img_1.png" alt="foto-news">
+    </div>
+    <!-- ------------------------------------------------------------------------------------------ -->
+    <section class="features">
+      <div class='container'>
+        <h2 class='features__title'>особенности</h2>
+        <ul class="features__list">
+          <li class="features__item">
+            <div class='features__icon-background'>
+              <img src="img/icons/features_1.png" alt="" class='features__icon-img'>
+            </div>
+            <h3 class="features__item-title features__item-title_uniqueness">уникальность</h3>
+            Мы делаем всё, для вашего комфорта
+            <ul class="features__desk-list">
+              <li class="features__desk-item">Питание включено</li>
+              <li class="features__desk-item">Багаж (5 кг)</li>
+              <li class="features__desk-item">Душ/баняs</li>
+            </ul>
           </li>
-          <li class="sidebar__pic-item">
-            <img src="img/sidebar_img_2.png" alt="foto-news">
+          <li class="features__item">
+            <div class='features__icon-background'>
+              <img src="img/icons/features_2.png" alt="" class='features__icon-img'>
+            </div>
+            <h3 class="features__item-title features__item-title_premium">премиум-класс</h3>
+            Наш зал оборудован тренажёрами А-класса
+            <ul class="features__desk-list">
+              <li class="features__desk-item">Качество </li>
+              <li class="features__desk-item">Продуктивность</li>
+              <li class="ffeatures__desk-item">Результат</li>
+            </ul>
           </li>
-          <li class="sidebar__pic-item">
-            <img src="img/sidebar_img_3.png" alt="foto-news">
+          <li class="features__item">
+            <div class='features__icon-background'>
+              <img src="img/icons/features_3.png" alt="" class='features__icon-img'>
+            </div>
+            <h3 class="features__item-title features__item-title_coach">личный тренер</h3>
+            Тренер сделает всё для вашего результата
+            <ul class="features__desk-list">
+              <li class="features__desk-item">Программа</li>
+              <li class="features__desk-item">Питание</li>
+              <li class="features__desk-item">План тренировок</li>
+            </ul>
           </li>
         </ul>
-      </aside>
-      <ul class="last-news__list">
-        <li class="last-news__item">
-          <img src="img/last-news_img_1.png" alt="foto" class="last-news__pic last-news__pic_1">
-          <div class="last-news__desc">
-            <div class="last-news__date">12.10.2016</div>
-            <h4 class="last-news__h4">Похудение с помощью бодибилдинга!</h4>
-            <p class="last-news__message">
-              Вдыхание одного литра кислорода эквивалентно «сжиганию» 5 калорий, однако в минуту при самом высоком темпе движений атлет способен вдохнуть не более 3-4 литров кислорода. Это крайне важно для каждого начинающего атлета.
-            </p>
-          </div>
-        </li>
-        <li class="last-news__item">
-          <img src="img/last-news_img_2.png" alt="last_news_foto" class="last-news__pic last-news__pic2">
-          <div class="last-news__desc">
-            <div class="last-news__date">01.02.2016</div>
-            <h4 class="last-news__h4">Заражай друзей, получай призы!</h4>
-            <p class="last-news__message">
-              Дополнительно для Вас: пользование сауной и предоставление средств личной гигиены, пользование баром, таблица замеров, дружеская атмосфера и постоянная поддержка. Мы запотимся о вашем комфорте и предлагаем испытать это уже сегодня!
-            </p>
-          </div>
-        </li>
+      </div>
+    </section>
+    <!-- ------------------------------------------------------------------------------------------ -->
 
-        <li class="last-news__item">
-          <img src="img/last-news_img_3.png" alt="last_news_foto" class="last-news__pic last-news__pic3">
-          <div class="last-news__desc">
-            <div class="last-news__date">22.12.2015</div>
-            <h4 class="last-news__h4">Фрилансер? Выпрями спину!</h4>
-            <p class="last-news__message">
-              Создайте рабочее место под себя. Вот этот инструмент поможет определить, что подходит именно вам и вашему организму. Используйте специальную подставку для ноутбука, если вы проводите за ним больше 2 часов. Настройте высоту и яркость монитора!
-            </P>
-          </div>
-        </li>
-      </ul>
+    <section class='last_news'>
+      <div class="container">
 
-      <div class="pagination">
-        <div class="pagination__display">Страница 1 из 7</div>
-        <div class="pagination__pager">
-          <a href="#" class="pagination__button-prev">< </a>
-          <ul class="pagination__list">
-            <li class="pagination__item">
-              <div class='pagination__background pagination__background--active'>
-                <a href="#" class="pagination__link pagination__link--active">1</a>
-              </div>
+        <h2 class="last-news__main-title">ПОСЛЕДНИЕ НОВОСТИ</h2>
+
+        <aside class="sidebar">
+          <div class="sidebar__title">
+            <h4 class='top-news__date'>топ новостей</h4>
+            <div class="top-news__date top-news__date--month ">за сентябрь</div>
+          </div>
+          <ul class="sidebar__pic-list">
+            <li class="sidebar__pic-item">
+              <img src="img/sidebar_img_1.png" alt="foto-news">
             </li>
-            <li class="pagination__item">
-              <a href="#" class="pagination__link">2</a>
+            <li class="sidebar__pic-item">
+              <img src="img/sidebar_img_2.png" alt="foto-news">
             </li>
-            <li class="pagination__item">
-              <a href="#" class="pagination__link">3</a>
-            </li>
-            <li class="pagination__item">
-              <a href="#" class="pagination__link">4</a>
-            </li>
-            <li class="pagination__item">
-              <a href="#" class="pagination__link">5</a>
-            </li>
-            <li class="pagination__item">
-              <a href="#" class="pagination__link">6</a>
-            </li>
-            <li class="pagination__item">
-              <a href="#" class="pagination__link">7</a>
+            <li class="sidebar__pic-item">
+              <img src="img/sidebar_img_3.png" alt="foto-news">
             </li>
           </ul>
-          <a href="#" class="pagination__button-next"> ></a>
+        </aside>
+
+        <div class="last_news__news-content">
+          <ul class="last-news__list">
+            <li class="last-news__item">
+              <div class='last-news__pic-wrap'>
+                <img src="img/last-news_img_1.png" alt="foto" class="last-news__pic last-news__pic--1">
+              </div>
+              <div class="last-news__desc">
+                <div class="last-news__date">12.10.2016</div>
+                <h4 class="last-news__h4">Похудение с помощью бодибилдинга!</h4>
+                <p class="last-news__message">
+                  Вдыхание одного литра кислорода эквивалентно «сжиганию» 5 калорий,
+                  однако в минуту при самом высоком темпе движений атлет способен
+                   вдохнуть не более 3-4 литров кислорода. Это крайне важно для
+                   каждого начинающего атлета.
+                </p>
+              </div>
+            </li>
+            <li class="last-news__item">
+              <div class='last-news__pic-wrap'>
+                <img src="img/last-news_img_2.png" alt="last_news_foto" class="last-news__pic last-news__pic2">
+              </div>
+              <div class="last-news__desc">
+                <div class="last-news__date">01.02.2016</div>
+                <h4 class="last-news__h4">Заражай друзей, получай призы!</h4>
+                <p class="last-news__message">
+                  Дополнительно для Вас: пользование сауной и предоставление средств личной гигиены, пользование баром, таблица замеров, дружеская атмосфера и постоянная поддержка. Мы запотимся о вашем комфорте и предлагаем испытать это уже сегодня!
+                </p>
+              </div>
+            </li>
+            <li class="last-news__item">
+              <div class='last-news__pic-wrap'>
+                <img src="img/last-news_img_3.png" alt="last_news_foto" class="last-news__pic last-news__pic3">
+              </div>
+              <div class="last-news__desc">
+                <div class="last-news__date">22.12.2015</div>
+                <h4 class="last-news__h4">Фрилансер? Выпрями спину!</h4>
+                <p class="last-news__message">
+                  Создайте рабочее место под себя. Вот этот инструмент поможет определить, что подходит именно вам и вашему организму. Используйте специальную подставку для ноутбука, если вы проводите за ним больше 2 часов. Настройте высоту и яркость монитора!
+                </P>
+              </div>
+            </li>
+          </ul>
+      </div>
+
+        <div class="pagination">
+          <div class="pagination__display">Страница 1 из 7</div>
+          <div class="pagination__pager">
+            <a href="#" class="pagination__button-prev">< </a>
+            <ul class="pagination__list">
+              <li class="pagination__item">
+                <div class='pagination__background pagination__background--active'>
+                  <a href="#" class="pagination__link pagination__link--active">1</a>
+                </div>
+              </li>
+              <li class="pagination__item">
+                <a href="#" class="pagination__link">2</a>
+              </li>
+              <li class="pagination__item">
+                <a href="#" class="pagination__link">3</a>
+              </li>
+              <li class="pagination__item">
+                <a href="#" class="pagination__link">4</a>
+              </li>
+              <li class="pagination__item">
+                <a href="#" class="pagination__link">5</a>
+              </li>
+              <li class="pagination__item">
+                <a href="#" class="pagination__link">6</a>
+              </li>
+              <li class="pagination__item">
+                <a href="#" class="pagination__link">7</a>
+              </li>
+            </ul>
+            <a href="#" class="pagination__button-next"> ></a>
+          </div>
         </div>
       </div>
     </section>
@@ -180,38 +205,28 @@
           </div>
           <ul class="social-networks__list">
             <li class="social-networks__item">
-              <a>
-                <div class='social-networks__icon-background'>
+              <a class='social-networks__icon-background'>
                   <img src="img/icons/vk.png" alt="vk" class='social-networks__icon'>
-                </div>
               </a>
             </li>
             <li class="social-networks__item">
-              <a>
-                <div class='social-networks__icon-background'>
+              <a class='social-networks__icon-background'>
                   <img src="img/icons/fb.png" alt="fb" class='social-networks__icon'>
-                </div>
               </a>
             </li>
             <li class="social-networks__item">
-              <a>
-                <div class='social-networks__icon-background'>
+              <a class='social-networks__icon-background'>
                   <img src="img/icons/google.png" alt="google" class='social-networks__icon'>
-                </div>
               </a>
             </li>
             <li class="social-networks__item">
-              <a>
-                <div class='social-networks__icon-background'>
+              <a class='social-networks__icon-background'>
                   <img src="img/icons/twitter.png" alt="tw" class='social-networks__icon'>
-                </div>
               </a>
             </li>
             <li class="social-networks__item">
-              <a>
-                <div class='social-networks__icon-background'>
+              <a class='social-networks__icon-background'>
                   <img src="img/icons/mail.png" alt="vk" class='social-networks__icon'>
-                </div>
               </a>
             </li>
           </ul>
