--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <img src="img/icons/features_1.png" alt="" class='features__icon-img'>
             </div>
             <h3 class="features__item-title features__item-title_uniqueness">уникальность</h3>
-            Мы делаем всё, для вашего комфорта
+            <div class="features__item-text">Мы делаем всё, для вашего комфорта</div>
             <ul class="features__desk-list">
               <li class="features__desk-item">Питание включено</li>
               <li class="features__desk-item">Багаж (5 кг)</li>
@@ -66,7 +66,7 @@
               <img src="img/icons/features_2.png" alt="" class='features__icon-img'>
             </div>
             <h3 class="features__item-title features__item-title_premium">премиум-класс</h3>
-            Наш зал оборудован тренажёрами А-класса
+            <div class="features__item-tex">Наш зал оборудован тренажёрами А-класса</div>
             <ul class="features__desk-list">
               <li class="features__desk-item">Качество </li>
               <li class="features__desk-item">Продуктивность</li>
@@ -78,7 +78,7 @@
               <img src="img/icons/features_3.png" alt="" class='features__icon-img'>
             </div>
             <h3 class="features__item-title features__item-title_coach">личный тренер</h3>
-            Тренер сделает всё для вашего результата
+            <div class="features__item-tex">Тренер сделает всё для вашего результата</div>
             <ul class="features__desk-list">
               <li class="features__desk-item">Программа</li>
               <li class="features__desk-item">Питание</li>
@@ -160,12 +160,10 @@
         <div class="pagination">
           <div class="pagination__display">Страница 1 из 7</div>
           <div class="pagination__pager">
-            <a href="#" class="pagination__button-prev">< </a>
+            <a href="#" class="pagination__button">< </a>
             <ul class="pagination__list">
-              <li class="pagination__item">
-                <div class='pagination__background pagination__background--active'>
+              <li class="pagination__item pagination__item--active">
                   <a href="#" class="pagination__link pagination__link--active">1</a>
-                </div>
               </li>
               <li class="pagination__item">
                 <a href="#" class="pagination__link">2</a>
@@ -186,7 +184,7 @@
                 <a href="#" class="pagination__link">7</a>
               </li>
             </ul>
-            <a href="#" class="pagination__button-next"> ></a>
+            <a href="#" class="pagination__button"> ></a>
           </div>
         </div>
       </div>
