--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <img src="img/icons/features_2.png" alt="" class='features__icon-img'>
             </div>
             <h3 class="features__item-title features__item-title_premium">премиум-класс</h3>
-            <div class="features__item-tex">Наш зал оборудован тренажёрами А-класса</div>
+            <div class="features__item-text">Наш зал оборудован тренажёрами А-класса</div>
             <ul class="features__desk-list">
               <li class="features__desk-item">Качество </li>
               <li class="features__desk-item">Продуктивность</li>
@@ -77,7 +77,7 @@
               <img src="img/icons/features_3.png" alt="" class='features__icon-img'>
             </div>
             <h3 class="features__item-title features__item-title_coach">личный тренер</h3>
-            <div class="features__item-tex">Тренер сделает всё для вашего результата</div>
+            <div class="features__item-text">Тренер сделает всё для вашего результата</div>
             <ul class="features__desk-list">
               <li class="features__desk-item">Программа</li>
               <li class="features__desk-item">Питание</li>
@@ -234,4 +234,3 @@
   </div>
 </body>
 </html>
-
