--- a/comments.html
+++ b/comments.html
@@ -12,22 +12,22 @@
 
     <header class='header header--comments'>
         <div class="container header__container">
-          <a href="/" class='name name_header'>афродита</a>
+          <a href="index.html" class='name name_header'>афродита</a>
 
           <nav class="nav">
             <ul class="nav__list">
               <li class="nav__item">
-                <a href="#" class="nav__link nav__link_icon_main">
+                <a href="index.html" class="nav__link nav__link_icon_main">
                   <span class="nav__title">ГЛАВНАЯ</span>
                 </a>
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link link_icon_reviews">
+                <a href="comments.html" class="nav__link link_icon_reviews">
                   <span class="nav__title">ОТЗЫВЫ</span>
                 </a>
               </li>
               <li class="nav__item">
-                <a href="#" class="nav__link nav__link_services">
+                <a href="services.html" class="nav__link nav__link_services">
                   <span class="nav__title">УСЛУГИ</span>
                 </a>
               </li>
