--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
       <header class='header'>
         <div class="container header__container">
-          <a href="/" class='name name_header'>афродита</a>
+          <a href="index.html" class='name name_header'>афродита</a>
 
           <nav class="nav">
             <ul class="nav__list">
@@ -95,9 +95,7 @@
 
       <section class='last_news'>
         <div class="container last_news__container">
-
           <h2 class="last-news__main-title">ПОСЛЕДНИЕ НОВОСТИ</h2>
-
           <div class='last_news__content'>
             <div class="last_news__posts">
               <ul class="last-news__list">
