--- a/services.html
+++ b/services.html
@@ -41,7 +41,7 @@
         </div>
     </header>
 
-    <nav class="breadcrumbs">
+    <nav class="breadcrumbs__services">
       <div class="container breadcrumbs__container">
         <ul class="breadcrumbs__list">
           <li class="breadcrumbs__item">
@@ -55,87 +55,80 @@
     </nav>
 
     <main class="main_content">
-      <!-- использован класс от отзывов -->
-      <section class='reviews'>
-        <div class="container reviews__container">
-          <h2 class="reviews__main-title">УСЛУГИ</h2>
-          <div class="list-wrapper">
-            <ul class="reviews__list--vertical">
-              <li class="reviews__item-serv">
-                <div class="review__avatar">
-                  <div class="services-img">
-                    <img src="./img/services/1.png" class="avatar__pic" alt="">
-                  </div>
+      <section class='cervices'>
+        <div class="container cervices__container">
+          <h2 class="cervices__main-title">УСЛУГИ</h2>
+          <div class="cervices__list-wrapper">
+            <ul class="cervices__list">
+              <li class="cervices__item">
+                <div class="cervices__pic-wrap">
+                  <img src="./img/services/1.png" class="cervices__pic" alt="">
+                  <h3 class="text_on_pic">ФИТНЕС</h3>
                 </div>
-                <div class="review__desc">
-                      <h4 class="review__username">Фитнесс</h4>
-                    <p class="review__message">
-                      Фитнес - это основное направление в нашем центре. Открыто 6 залов для занятий с 7-00 до 22-00. Работают 24 фитнес-тренера, есть авторские и классические программы для похудения, восстановления фигуры, здоровья и молодости. Занятия с персональным тренером помогут достичь максимального результата в сжатые сроки.
+                <div class="cervices__desc">
+                  <h4 class="cervices__name">Фитнес</h4>
+                  <p class="cervices__message">
+                    Фитнес - это основное направление в нашем центре. Открыто 6 залов для занятий с 7-00 до 22-00. Работают 24 фитнес-тренера, есть авторские и классические программы для похудения, восстановления фигуры, здоровья и молодости. Занятия с персональным тренером помогут достичь максимального результата в сжатые сроки.
+                  </p>
+                </div>
+              </li>
+              <li class="cervices__item">
+                <div class="cervices__pic-wrap">
+                    <img src="./img/services/2.png" class="cervices__pic" alt="">
+                    <h3 class="text_on_pic">ДИЕТОЛОГ</h3>
+                </div>
+                <div class="cervices__desc">
+                    <h4 class="cervices__name">Личный диетолог</h4>
+                    <p class="cervices__message">
+                      Поможет вам получить более заметный результат от тренировок. Создаст меню на каждый день, с учетом вкусовых предпочтений и особенностей здоровья. Проанализирует текущий рацион и укажет на ошибки. Поможет сделать питание разнообразным и полезным, объяснит доступно о важной роли тех или иных витаминов и микроэлемент
                     </p>
                 </div>
               </li>
-              <li class="reviews__item">
-                <div class="review__avatar">
-                  <div class="services-img">
-                    <img src="./img/services/2.png" class="avatar__pic" alt="">
-                  </div>
+              <li class="cervices__item">
+                <div class="cervices__pic-wrap">
+                    <img src="./img/services/3.png" class="cervices__pic" alt="">
+                    <h3 class="text_on_pic">ЙОГА</h3>
                 </div>
-                <div class="review__desc">
-                    <h4 class="review__username">Инна Смольная</h4>
-                    <p class="review__message">
-                      Подарили на день рождения абонемент в бассейн, пришлось воспользоваться. Сама бы я сюда не пришла, не очень нравится плавать с мужиками, которые пялятся постоянно, администрации следует обратить внимание на этот вопрос! Еще бросилось в глаза хамство обслуживающего персонала. Уборщица в раздевалке вела себя, как будто это к ней в гости пришли.
+                <div class="cervices__desc">
+                    <h4 class="cervices__name">Йога</h4>
+                    <p class="cervices__message">
+                      Гармония души и тела – это базовая составляющая здоровья и красоты. Наш зал для занятий йоги открыт для людей всех возрастов без ограничений. Отдельным направлением является йога для беременных с более щадящей программой. Йога тренеры имеют сертификаты и являются победителями международных конкурсов..
                     </p>
                 </div>
               </li>
-              <li class="reviews__item">
-                <div class="review__avatar">
-                  <div class="services-img">
-                    <img src="./img/services/3.png" class="avatar__pic" alt="">
-                  </div>
+              <li class="cervices__item">
+                <div class="cervices__pic-wrap">
+                    <img src="./img/services/4.png" class="cervices__pic" alt="">
+                    <h3 class="text_on_pic">ПЕТЛИ TRX</h3>
                 </div>
-                <div class="review__desc">
-                    <h4 class="review__username">Владимир Савлельев</h4>
-                    <p class="review__message">
-                      Занимаюсь 4й месяц на петлях ТРХ и очень нравится результат. Даже знакомые отметили, что я помолодела, появилась талия, ножки постройнели. Нагрузка сначала была непривычная, но втягиваешься быстро, тем более, что отражение в зеркале радует. Цены приятные, а если платить на полгода вперед, то вообще выгодно получается, скидка почти 30%.
+                <div class="cervices__desc">
+                    <h4 class="cervices__name">Петли TPX</h4>
+                    <p class="cervices__message">
+                      Новое направление для нашего центра, которое стало одним из самых популярных и востребованных. Программа TRX Suspension Training создана для людей с начальным уровнем подготовки и позволяет эффективно тренироваться, используя нарастающую нагрузку, которая зависит от силы и массы человека. Петли усиливают ловкость, гибкость и подвижность. В нашем центре проводятся индивидуальные и групповые тренировки ТРХ.
                     </p>
                 </div>
               </li>
-              <li class="reviews__item">
-                <div class="review__avatar">
-                  <div class="services-img">
-                    <img src="./img/services/4.png" class="avatar__pic" alt="">
-                  </div>
+              <li class="cervices__item">
+                <div class="cervices__pic-wrap">
+                    <img src="./img/services/5.png" class="cervices__pic" alt="">
+                    <h3 class="text_on_pic">КРОССФИТ</h3>
                 </div>
-                <div class="review__desc">
-                    <h4 class="review__username">Ирина Савина</h4>
-                    <p class="review__message">
-                      Норм клуб, железа хватает, но техника устаревшая. За эту цену – прокатит. Если хотите большего, то обращайтесь в специализированные тренажерки с новым железом и европейской техникой.
+                <div class="cervices__desc">
+                    <h4 class="cervices__name">Кроссфит</h4>
+                    <p class="cervices__message">
+                      Авторская запатентованная программа тренировки, включающая элементы тяжелой атлетики, занятий с гирями, гимнастики. Данная программа безупречно подходит для ежедневных тренировок людям с сидячим образом жизни. Преимущество кроссфита в том, что он одинаково хорошо воспринимается и мужчинами, и женщинами и подходит для семейных групповых тренировок. Высокая эффективности программы обусловлена чуткими рекомендациями наших сертифицированных тренеров.
                     </p>
                 </div>
               </li>
-              <li class="reviews__item">
-                <div class="review__avatar">
-                  <div class="services-img">
-                    <img src="./img/services/5.png" class="avatar__pic" alt="">
-                  </div>
+              <li class="cervices__item">
+                <div class="cervices__pic-wrap">
+                    <img src="./img/services/6.png" class="cervices__pic" alt="">
+                    <h3 class="text_on_pic">БАССЕЙН</h3>
                 </div>
-                <div class="review__desc">
-                    <h4 class="review__username">Владимир Савлельев</h4>
-                    <p class="review__message">
-                      Занимаюсь 4й месяц на петлях ТРХ и очень нравится результат. Даже знакомые отметили, что я помолодела, появилась талия, ножки постройнели. Нагрузка сначала была непривычная, но втягиваешься быстро, тем более, что отражение в зеркале радует. Цены приятные, а если платить на полгода вперед, то вообще выгодно получается, скидка почти 30%.
-                    </p>
-                </div>
-              </li>
-              <li class="reviews__item">
-                <div class="review__avatar">
-                  <div class="services-img">
-                    <img src="./img/services/6.png" class="avatar__pic" alt="">
-                  </div>
-                </div>
-                <div class="review__desc">
-                    <h4 class="review__username">Ирина Савина</h4>
-                    <p class="review__message">
-                      Норм клуб, железа хватает, но техника устаревшая. За эту цену – прокатит. Если хотите большего, то обращайтесь в специализированные тренажерки с новым железом и европейской техникой.
+                <div class="cervices__desc">
+                    <h4 class="cervices__name">Бассейн</h4>
+                    <p class="cervices__message">
+                      Большой 50 метровый бассейн, разделенный на 6 дорожек, позволит заниматься индивидуальным плаванием или аквааэробикой. Занятия проводит сертифицированный тренер – Ситник Ирина Валерьевна, известная своими успехами в школе подготовки олимпийского резерва. В бассейне есть место для занятий с детьми (ежедневно с 12-00 до 14-00), а также проводится аквааэробика для беременных каждый день в 10-00 и 19-00.
                     </p>
                 </div>
               </li>
@@ -145,7 +138,6 @@
       </section>
 
       <section class="partners">
-
           <div class="container partners__container">
               <h2 class="partners__title">ПАРТНЁРЫ</h2>
               <div class="partners__wrapper">
@@ -172,11 +164,7 @@
             </div>
           </div>
       </section>
-
     </main>
-
-
-
 
     <footer class='footer'>
         <div class="container footer__container">
@@ -185,7 +173,7 @@
             на курсе «HTML + CSS» в <a class="LoftSchool" href="/">LoftSchool</a>.<br/>
             Автор работы: <b>Соколов Антон</b>
           </div>
-          <a href="/" class='name name_footer'>афродита</a>
+          <a href="index.html" class='name name_footer'>афродита</a>
           <div class="social-networks">
             <div class="social-network-wraper"><div class="social-networks__title">
               Наши социальные сети
