--- a/services.html
+++ b/services.html
@@ -17,7 +17,7 @@
           <nav class="nav">
             <ul class="nav__list">
               <li class="nav__item">
-                <a href="index.html" class="nav__link nav__link_icon_main">
+                <a href= "index.html" class="nav__link nav__link_icon_main">
                   <span class="nav__title">ГЛАВНАЯ</span>
                 </a>
               </li>
@@ -143,22 +143,24 @@
               <div class="partners__wrapper">
                 <ul class="partners__list">
                   <li class="partners__item">
-                    <div class="partners__logo"><img src="img/services/logo-1.png" alt=""></div>
+                    <div class="partners__logo partners__logo--1">
+                      <img src="img/services/logo-1.png" alt="" class="partners__logo-pic">
+                    </div>
                   </li>
                   <li class="partners__item">
-                    <div class="partners__logo"><img src="img/services/logo-2.png" alt=""></div>
+                    <div class="partners__logo partners__logo--2"><img src="img/services/logo-2.png" alt="" class='partners__logo-pic'></div>
                   </li>
                   <li class="partners__item">
-                    <div class="partners__logo"><img src="img/services/logo-3.png" alt=""></div>
+                    <div class="partners__logo partners__logo--3"><img src="img/services/logo-3.png" alt="" class='partners__logo-pic'></div>
                   </li>
                   <li class="partners__item">
-                    <div class="partners__logo"><img src="img/services/logo-4.png" alt=""></div>
+                    <div class="partners__logo partners__logo--4"><img src="img/services/logo-4.png" alt="" class='partners__logo-pic'></div>
                   </li>
                   <li class="partners__item">
-                    <div class="partners__logo"><img src="img/services/logo-5.png" alt=""></div>
+                    <div class="partners__logo partners__logo--5"><img src="img/services/logo-5.png" alt="" class='partners__logo-pic'></div>
                   </li>
                   <li class="partners__item">
-                    <div class="partners__logo"><img src="img/services/logo-6.png" alt=""></div>
+                    <div class="partners__logo partners__logo--6"><img src="img/services/logo-6.png" alt="" class='partners__logo-pic'></div>
                   </li>
                 </ul>
             </div>
