--- a/services.html
+++ b/services.html
@@ -144,23 +144,33 @@
                 <ul class="partners__list">
                   <li class="partners__item">
                     <div class="partners__logo partners__logo--1">
-                      <img src="img/services/logo-1.png" alt="" class="partners__logo-pic">
+                      <img src="img/services/logo-1_color.png" alt="" class="partners__logo-pic">
                     </div>
                   </li>
                   <li class="partners__item">
-                    <div class="partners__logo partners__logo--2"><img src="img/services/logo-2.png" alt="" class='partners__logo-pic'></div>
+                    <div class="partners__logo partners__logo--2">
+                      <img src="img/services/logo-2_color.png" alt="" class='partners__logo-pic'>
+                    </div>
                   </li>
                   <li class="partners__item">
-                    <div class="partners__logo partners__logo--3"><img src="img/services/logo-3.png" alt="" class='partners__logo-pic'></div>
+                    <div class="partners__logo partners__logo--3">
+                      <img src="img/services/logo-3_color.png" alt="" class='partners__logo-pic'>
+                    </div>
                   </li>
                   <li class="partners__item">
-                    <div class="partners__logo partners__logo--4"><img src="img/services/logo-4.png" alt="" class='partners__logo-pic'></div>
+                    <div class="partners__logo partners__logo--4">
+                      <img src="img/services/logo-4_color.png" alt="" class='partners__logo-pic'>
+                    </div>
                   </li>
                   <li class="partners__item">
-                    <div class="partners__logo partners__logo--5"><img src="img/services/logo-5.png" alt="" class='partners__logo-pic'></div>
+                    <div class="partners__logo partners__logo--5">
+                      <img src="img/services/logo-5_color.png" alt="" class='partners__logo-pic'>
+                    </div>
                   </li>
                   <li class="partners__item">
-                    <div class="partners__logo partners__logo--6"><img src="img/services/logo-6.png" alt="" class='partners__logo-pic'></div>
+                    <div class="partners__logo partners__logo--6">
+                      <img src="img/services/logo-6_color.png" alt="" class='partners__logo-pic'>
+                    </div>
                   </li>
                 </ul>
             </div>
