--- a/services.html
+++ b/services.html
@@ -182,30 +182,19 @@
               </div>
               <ul class="social-networks__list">
                 <li class="social-networks__item">
-                  <a class='social-networks__icon-background'>
-                      <img src="img/icons/vk.png" alt="vk" class='social-networks__icon'>
-                  </a>
+                  <a class='social-networks__icon social-networks__icon--vk' href="#"></a>
                 </li>
                 <li class="social-networks__item">
-                  <a class='social-networks__icon-background'>
-                      <img src="img/icons/fb.png" alt="fb" class='social-networks__icon'>
-                  </a>
+                  <a class='social-networks__icon social-networks__icon--fb' href="#"></a>
                 </li>
                 <li class="social-networks__item">
-                  <a class='social-networks__icon-background'>
-                      <img src="img/icons/google.png" alt="google" class='social-networks__icon'>
-                  </a>
+                  <a class='social-networks__icon social-networks__icon--google'></a>
                 </li>
                 <li class="social-networks__item">
-                  <a class='social-networks__icon-background'>
-                      <img src="img/icons/twitter.png" alt="tw" class='social-networks__icon'>
-                  </a>
+                  <a class='social-networks__icon social-networks__icon--tw'></a>
                 </li>
-
                 <li class="social-networks__item">
-                  <a class='social-networks__icon-background'>
-                      <img src="img/icons/mail.png" alt="vk" class='social-networks__icon'>
-                  </a>
+                  <a class='social-networks__icon social-networks__icon--mail'></a>
                 </li>
               </ul>
             </div>
