--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="intro">
       <div class='intro__container'>
         <div class="welcome">
-          <img src="img/logo.png" alt="" class="intro__logo">
+          <img src="/img/logo.png" alt="" class="intro__logo">
           <a href="main.html" class='welcome__link'>ПЕРЕЙТИ НА САЙТ</a>
         </div>
       </div>
