--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="intro">
       <div class='intro__container'>
         <div class="welcome">
-          <img src="/img/logo.png" alt="" class="intro__logo">
-          <a href="main.html" class='welcome__link'>ПЕРЕЙТИ НА САЙТ</a>
+          <img src="img/logo.png" alt="" class="intro__logo">
+          <a href="index.html" class='welcome__link'>ПЕРЕЙТИ НА САЙТ</a>
         </div>
       </div>
     </div>
