--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class='intro__container'>
         <div class="welcome">
           <img src="img/logo.png" alt="" class="intro__logo">
-          <a href="index.html" class='welcome__link'>ПЕРЕЙТИ НА САЙТ</a>
+          <a href="main.html" class='welcome__link'>ПЕРЕЙТИ НА САЙТ</a>
         </div>
       </div>
     </div>
