--- a/main.html
+++ b/main.html
@@ -129,7 +129,8 @@
               </li>
             </ul>
           <div class="social-networks">
-              <div class="social-network-wraper"><div class="social-networks__title">
+              <div class="social-network-wraper">
+                <div class="social-networks__title">
                 Наши социальные сети
               </div>
               <ul class="social-networks__list">
