--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name='viewport' content='width=1100'>
   <title>Intro</title>
   <link rel="stylesheet" href="css/main.css">
 </head>
@@ -13,7 +14,7 @@
       <div class='intro__container'>
         <div class="welcome">
           <img src="img/logo.png" alt="" class="intro__logo">
-          <a href="main.html" class='welcome__link'>ПЕРЕЙТИ НА САЙТ</a>
+          <a href="main.html" class='welcome__link'>go НА САЙТ</a>
         </div>
       </div>
     </div>
