--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="welcome">
           <img src="img/logo.png" alt="" class="intro__logo">
 
-          <a href="main.html" class='welcome__link'>опа о23131па НА САЙТ</a>
+          <a href="main.html" class='welcome__link'>САЙТ</a>
 
         </div>
       </div>
